--- a/yeni.html
+++ b/yeni.html
@@ -7,7 +7,7 @@
  
 <title>ensasfksza</title>
  
-<link>https://bedava-internet-2021.com/sondur.html/</link>
+<link>https://raw.githubusercontent.com/ensarkanyilmaz/feed/main/yeni.html</link>
  
 <language>en</language>
  
